--- a/styles.css
+++ b/styles.css
@@ -81,14 +81,18 @@
  }
 
 
+.taskIconDiv{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    gap:10px;
+}
+
  .taskDiv{
 
  }
 
  
-.fa-check {
-    color:#d9d9d9;
-}
 
 .pri-low {
     color: green
