marking complete, deleting from ui, undoing mark complete via icons rough

--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,7 @@
 }
 
  .taskDiv{
-
- }
+}
 
  
 
@@ -104,6 +103,10 @@
 
 .pri-high {
     color:red;
+}
+
+.completed {
+    text-decoration: line-through;
 }
 
 
