--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,10 @@
     text-decoration: solid line-through 2px;
 }
 
+input, textarea, select {
+    border-radius: 5px;
+    border:solid #d9d9d9;
+}
 
   html{
 
