--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,10 @@
  .taskContainer {
     display:flex;
     flex-direction: column;
-    border:dashed lightgreen;
+    margin:10px;
+    background-color: #d9d9d9;
+    border-radius: 5px;
+    
  }
 
 
@@ -89,6 +92,7 @@
 }
 
  .taskDiv{
+ padding: 5px;
 }
 
  
