--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,18 @@
     text-align: center;
  }
 
+ .projTitleDiv {
+    display:flex;
+    align-content: space-between;
+    align-items: center;
+    justify-content: center;
+    gap:3.5px;
+ }
+ 
+ .projTitleDiv i{
+    font-size: x-large;
+ }
+
 
  .taskContainer {
     display:flex;
@@ -124,9 +136,13 @@
 }
 
  .taskDiv{
- padding: 5px;
+    display: flex;
+    flex-direction: column;
+ padding: 10px;
  border-radius: 6px;
  background-color: #d9d9d9;
+ align-items: center;
+ justify-content: center;
 }
 
  
