--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,28 @@ input, textarea, select {
     border:solid #BAA5FF;
 }
 
+button {
+    background-color: #9792E3; /* Green */
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 10px;
+    transition-duration: 0.2s;
+
+  }
+
+
+  button:hover {
+    background-color: #BAA5FF;
+  }
+
+
   html{
 
     margin-bottom: 10vh;
