made pop up absolute, jumps to edit form

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
 .editFormPopup {
     display:none;
     z-index: 9;
-    position:fixed;
+    position:absolute;
     top:20vh;
     left:47vw;
 }
