--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,9 @@
  background-color: #BAA5FF;
  align-items: center;
  justify-content: center;
+
+ animation: append-animate .3s linear;
+
 }
 
 .taskDiv div, .taskDiv h4,.taskDiv p, .taskDiv i{
@@ -206,6 +209,17 @@ button {
   button:hover {
     background-color: #BAA5FF;
   }
+
+  @keyframes append-animate {
+	from {
+		transform: scale(0);
+		opacity: 0;
+	}
+	to {
+		transform: scale(1);
+		opacity: 1;	
+	}
+}
 
 
   html{
