style updates icon hover

--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,10 @@
     gap:10px;
 }
 
+.taskIconDiv i:hover{
+    transform: scale(1.5);
+}
+
  .taskDiv{
     display: flex;
     max-width: 25vw;
